--- a/ErikStein/index.html
+++ b/ErikStein/index.html
@@ -5,27 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Erik Stein</title>
 </head>
 <body>
-    <nav>
-        <!-- put socials in here -->
-    </nav>
-    <div class="header">
-        <div class="main">
-            <h1>Erik Stein Tattoos</h1>
-            <p>The current best Realism artist in Orange County, CA.</p>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1>Erik Stein Tattoos</h1>
+                <p>The current best Realism artist in Orange County, CA.</p>
+                <a href="https://www.instagram.com/erik.stein.tattoos/?hl=en"><button class="btn btn-dark">Contact Me</button></a>
+            </div>
+            <div class="col">
+                <img src="profile.jpeg">
+            </div>
         </div>
-        <div class="secondary">
-            <button>Contact</button>
+        <div class="work">
+            <h2>Some of my Best Work</h2>
+            <div class="row">
+                <div class="col">
+                    <img src="1.jpeg">
+                </div>
+                <div class="col">
+                    <img src="2.jpeg">
+                </div>
+                <div class="col">
+                    <img src="3.jpeg">
+                </div>
+                <div class="col">
+                    <img src="4.jpeg">
+                </div>
+                <div class="col">
+                    <img src="5.jpeg">
+                </div>
+                <div class="col">
+                    <img src="6.jpeg">
+                </div>
+                <div class="col">
+                    <img src="7.jpeg">
+                </div>
+                <div class="col">
+                    <img src="8.jpeg">
+                </div>
+                <div class="col">
+                    <img src="9.jpeg">
+                </div>
+            </div>
         </div>
     </div>
-    <div class="work">
-        <h2>My Current favorite pieces</h2>
-    </div>
-    <div class="contact">
-        <h2>Contact Me</h2>
-    </div>
-    <script src="script,js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
