--- a/ErikStein/index.html
+++ b/ErikStein/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
     <title>Erik Stein</title>
 </head>
 <body>
@@ -17,38 +17,42 @@
                 <a href="https://www.instagram.com/erik.stein.tattoos/?hl=en"><button class="btn btn-dark">Contact Me</button></a>
             </div>
             <div class="col">
-                <img src="profile.jpeg">
+                <img src="profile.jpeg" class="img-fluid">
             </div>
         </div>
         <div class="work">
             <h2>Some of my Best Work</h2>
             <div class="row">
                 <div class="col">
-                    <img src="1.jpeg">
+                    <img src="1.jpeg" class="img-fluid" alt="Tattoo Piece" width="200" height="auto">
                 </div>
                 <div class="col">
-                    <img src="2.jpeg">
+                    <img src="2.jpeg" class="img-fluid" alt="Tattoo Piece" width="200" height="auto">
                 </div>
                 <div class="col">
-                    <img src="3.jpeg">
+                    <img src="3.jpeg" class="img-fluid" alt="Tattoo Piece" width="200" height="auto">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <img src="4.jpeg" class="img-fluid" alt="Tattoo Piece" width="200" height="auto">
                 </div>
                 <div class="col">
-                    <img src="4.jpeg">
+                    <img src="5.jpeg" class="img-fluid" alt="Tattoo Piece" width="200" height="auto">
                 </div>
                 <div class="col">
-                    <img src="5.jpeg">
+                    <img src="6.jpeg" class="img-fluid" alt="Tattoo Piece" width="200" height="auto">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <img src="7.jpeg" class="img-fluid" alt="Tattoo Piece" width="200" height="auto">
                 </div>
                 <div class="col">
-                    <img src="6.jpeg">
+                    <img src="8.jpeg" class="img-fluid" alt="Tattoo Piece" width="200" height="auto">
                 </div>
                 <div class="col">
-                    <img src="7.jpeg">
-                </div>
-                <div class="col">
-                    <img src="8.jpeg">
-                </div>
-                <div class="col">
-                    <img src="9.jpeg">
+                    <img src="9.jpeg" class="img-fluid" alt="Tattoo Piece" width="200" height="auto">
                 </div>
             </div>
         </div>
