--- a/ErikStein/index.html
+++ b/ErikStein/index.html
@@ -4,57 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <title>Erik Stein</title>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h1>Erik Stein Tattoos</h1>
-                <p>The current best Realism artist in Orange County, CA.</p>
-                <a href="https://www.instagram.com/erik.stein.tattoos/?hl=en"><button class="btn btn-dark">Contact Me</button></a>
-            </div>
-            <div class="col">
-                <img src="profile.jpeg" class="img-fluid">
-            </div>
+    <div class="main">
+        <div class="container-hero">
+            <img src="profile.jpeg" alt="Profile Image">
+            <h1>ERIK STEIN</h1>
+            <a href="https://www.instagram.com/erik.stein.tattoos/?hl=en"><button>CONTACT ME</button></a>
         </div>
-        <div class="work">
-            <h2>Some of my Best Work</h2>
-            <div class="row">
-                <div class="col">
-                    <img src="1.jpeg" class="img-fluid" alt="Tattoo Piece" width="200" height="auto">
-                </div>
-                <div class="col">
-                    <img src="2.jpeg" class="img-fluid" alt="Tattoo Piece" width="200" height="auto">
-                </div>
-                <div class="col">
-                    <img src="3.jpeg" class="img-fluid" alt="Tattoo Piece" width="200" height="auto">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <img src="4.jpeg" class="img-fluid" alt="Tattoo Piece" width="200" height="auto">
-                </div>
-                <div class="col">
-                    <img src="5.jpeg" class="img-fluid" alt="Tattoo Piece" width="200" height="auto">
-                </div>
-                <div class="col">
-                    <img src="6.jpeg" class="img-fluid" alt="Tattoo Piece" width="200" height="auto">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <img src="7.jpeg" class="img-fluid" alt="Tattoo Piece" width="200" height="auto">
-                </div>
-                <div class="col">
-                    <img src="8.jpeg" class="img-fluid" alt="Tattoo Piece" width="200" height="auto">
-                </div>
-                <div class="col">
-                    <img src="9.jpeg" class="img-fluid" alt="Tattoo Piece" width="200" height="auto">
-                </div>
-            </div>
+        <div class="container-about">
+            <h3>Instagram</h3>
+            <p>@erik.stein.tattoos</p>
+            <h3>Address</h3>
+            <p>3480 E Orangethorpe Ave, Anaheim, CA 92806</p>
+            <h2>ABOUT ME</h2>
+            <p>I am an accomplished tattoo artist with 5 years of experience. Based out of Orange County, CA.
+                Specializing in black and grey realism. Currently partnered with Greyscale Tattoo Studio located in Anaheim, CA.</p>
+        </div>
+        <h2>MY WORK</h2>
+        <div class="container-work">
+            <img src="1.jpeg" alt="Tattoo piece">
+            <img src="2.jpeg" alt="Tattoo piece">
+            <img src="3.jpeg" alt="Tattoo piece">
+            <img src="4.jpeg" alt="Tattoo piece">
+            <img src="5.jpeg" alt="Tattoo piece">
+            <img src="6.jpeg" alt="Tattoo piece">
+            <img src="7.jpeg" alt="Tattoo piece">
+            <img src="8.jpeg" alt="Tattoo piece">
+            <img src="9.jpeg" alt="Tattoo piece">
         </div>
     </div>
     <script src="script.js"></script>
