--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
         </div>
         <h2>MY WORK</h2>
         <div class="container-work">
-            <img src="1.jpeg" alt="Tattoo piece">
-            <img src="2.jpeg" alt="Tattoo piece">
-            <img src="3.jpeg" alt="Tattoo piece">
-            <img src="4.jpeg" alt="Tattoo piece">
-            <img src="5.jpeg" alt="Tattoo piece">
-            <img src="6.jpeg" alt="Tattoo piece">
-            <img src="7.jpeg" alt="Tattoo piece">
-            <img src="8.jpeg" alt="Tattoo piece">
-            <img src="9.jpeg" alt="Tattoo piece">
+            <img src="images/1.jpeg" alt="Tattoo piece">
+            <img src="images/2.jpeg" alt="Tattoo piece">
+            <img src="images/3.jpeg" alt="Tattoo piece">
+            <img src="images/4.jpeg" alt="Tattoo piece">
+            <img src="images/5.jpeg" alt="Tattoo piece">
+            <img src="images/6.jpeg" alt="Tattoo piece">
+            <img src="images/7.jpeg" alt="Tattoo piece">
+            <img src="images/8.jpeg" alt="Tattoo piece">
+            <img src="images/9.jpeg" alt="Tattoo piece">
         </div>
     </div>
     <script src="script.js"></script>
