--- a/index.html
+++ b/index.html
@@ -8,26 +8,19 @@
     <link rel="stylesheet" href="styles.css">
     <title>Erik Stein - Portfolio</title>
 </head>
-<body class="bg-neutral-600">
-    <div class="profile container flex gap-4 items-center place-content-center">
-        <div class="profile-images w-1/2 p-2 m-2">
-            <img src="images/profile1.jpeg" class="profile-img shadow-xl shadow-black" alt="photo of Erik Stein tattooing a client">
-            <!-- <img src="images/profile2.jpeg" class="profile-img" alt="portrait photo of Erik Stein"> -->
-        </div>
-        <div class="profile-bio w-1/2 p-2 m-2 text-center">
+<body class="bg-zinc-900">
+    <div class="profile container flex-wrap gap-4">
+        <div class="profile-images p-2 m-2">
             <h1 class="font-mono text-3xl font-medium">Erik Stein</h1>
             <ul class="font-mono text-lg">
                 <li>I am an accomplished tattoo artist with 5 years of experience 💪</li>
                 <li>Based out of Orange County, CA 🍊</li>
-                <li>Currently partnered with Greyscale Tattoo Studio located in Anaheim, CA 📍</li>
+                <li>Currently partnered with Greyscale Tattoo Studio in Anaheim, CA 📍</li>
             </ul>
-            <a href="https://www.instagram.com/erik.stein.tattoos/?hl=en" class="font-mono text-lg">
-                <button class="bg-red-600 shadow-md shadow-black">Contact Me</button>
-            </a>
         </div>
     </div>
-    <div class="coverUps flex gap-4 items-center">
-        <div class="coverUps-text w-1/2 p-6 text-center">
+    <div class="coverUps">
+        <div class="coverUps-text p-6 text-center">
             <h2 class="font-mono text-2xl">One of My Favorite Cover-Ups</h2>
             <p class="font-mono text-lg">
                 My client came to me dissatisfied with his current work. 
@@ -35,7 +28,7 @@
                 After my services, my client left with his dream tattoo.
             </p>
         </div>
-        <div class="coverUps-images w-1/2 p-6">
+        <div class="coverUps-images p-6">
             <img src="images/coverUp-After.jpeg" class="coverUp-img shadow-xl shadow-black" alt="photo of client's arm after cover up">
             <!-- <img src="images/coverUp-Before.jpeg" class="coverUp-img" alt="photo of client's arm before cover up"> -->
         </div>
