--- a/index.html
+++ b/index.html
@@ -9,19 +9,26 @@
     <title>Erik Stein - Portfolio</title>
 </head>
 <body class="bg-zinc-900">
-    <div class="profile container flex-wrap gap-4">
-        <div class="profile-images p-2 m-2">
-            <h1 class="font-mono text-3xl font-medium">Erik Stein</h1>
+    <div class="profile gap-4">
+        <div class="profile-images p-2 m-2 text-center">
+            <h1 class="font-mono text-5xl font-medium">Erik Stein</h1>
+            <br>
             <ul class="font-mono text-lg">
                 <li>I am an accomplished tattoo artist with 5 years of experience 💪</li>
                 <li>Based out of Orange County, CA 🍊</li>
                 <li>Currently partnered with Greyscale Tattoo Studio in Anaheim, CA 📍</li>
             </ul>
         </div>
+        <div class="profile-pic">
+            <button><</button>
+            <img src="images/profile1.jpeg" alt="Photo of Erik tattooing a client">
+            <button>></button>
+        </div>
     </div>
     <div class="coverUps">
         <div class="coverUps-text p-6 text-center">
-            <h2 class="font-mono text-2xl">One of My Favorite Cover-Ups</h2>
+            <h2 class="font-mono text-3xl font-medium">One of My Favorite Cover-Ups</h2>
+            <br>
             <p class="font-mono text-lg">
                 My client came to me dissatisfied with his current work. 
                 He had an unfinished Foodog and his ex-girlfriend's name.
@@ -33,7 +40,7 @@
             <!-- <img src="images/coverUp-Before.jpeg" class="coverUp-img" alt="photo of client's arm before cover up"> -->
         </div>
     </div>
-    <h2 class="text-center p-6 font-mono text-2xl">Some of My Favorite Pieces</h2>
+    <h2 class="text-center p-6 font-mono text-3xl font-medium">My Portfolio</h2>
     <div class="work flex flex-wrap justify-center gap-x-6 gap-y-4">
         <img src="images/work1.jpeg" class="p-1 shadow-xl shadow-black" alt="photo of Dragon Ball Z tattoo">
         <img src="images/work2.jpeg" class="p-1 shadow-xl shadow-black" alt="photo of Joker tattoo">
