--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
         </div>
         <div class="coverUps-images p-6">
             <!-- rotating images of before and after cover ups with buttons -->
-            <img src="images/coverUp-After.jpeg" class="coverUp-img shadow-xl shadow-black" id="afterimg" alt="photo of client's arm after cover up">
-            <!-- <img src="images/coverUp-Before.jpeg" class="coverUp-img shadow-xl shadow-black" id="beforeimg" alt="photo of client's arm before cover up"> -->
-            <button class="bg-stone-600 p-3 m-3" id="beforebtn" onclick="">Before</button>
-            <button class="bg-stone-600 p-3 m-3" id="afterbtn">After</button>
+            <img src="images/coverUp-After.jpeg" class="coverUp-img shadow-xl shadow-black" id="coverUp" alt="photo of client's arm after cover up">
+            <button class="bg-stone-600 p-3 m-3" id="afterbtn" onclick="changeImage('images/coverUp-Before.jpeg')">Before</button>
+            <button class="bg-stone-600 p-3 m-3" id="afterbtn" onclick="changeImage('images/coverUp-After.jpeg')">After</button>
         </div>
     </div>
     <!-- showing off Erik's Portfolio of work -->
